--- a/notebook/demo_basic.ipynb
+++ b/notebook/demo_basic.ipynb
@@ -102,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-07 23:01:33,900 logger:'marqo' INFO     add_documents batch 0: took 24.729s for Marqo to process & index 20 docs. Roundtrip time: 24.756s.\n"
+      "2024-01-08 15:19:35,835 logger:'marqo' INFO     add_documents batch 0: took 30.290s for Marqo to process & index 20 docs. Roundtrip time: 30.324s.\n"
      ]
     },
     {
@@ -237,7 +237,7 @@
    "outputs": [],
    "source": [
     "# Create a bot (using GPT-4) and give it the indexed knowledge above.  We make the bot pick the top 5 candidate articles from which to derive its answer.\n",
-    "bot = bots.bot(\"gpt4\").withFacts(index, contentFields=[\"title\", \"text\"], top=5)"
+    "bot = bots.bot(\"gpt4\").withFacts(index, contentFields=[\"title\", \"text\"], top=RAG_KNOWLEDGE)"
    ],
    "metadata": {
     "collapsed": false
@@ -258,15 +258,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "One point of interest in Michigan is the M-137, a state trunkline highway that served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. The highway was first shown without a number label on maps in 1930 and labeled after an extension the next year. The highway's current routing was established in the 1950s. However, jurisdiction of the roadway was transferred from the Michigan Department of Transportation to the Grand Traverse County Road Commission in June 2020, and the highway designation was decommissioned in the process. [7751000]\n"
+      "Yes, one point of interest in Michigan is the M-137, a state trunkline highway that served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. However, the highway designation was decommissioned in June 2020 and the signage was removed by August 2020. [7751000]\n"
      ]
     }
    ],
    "source": [
     "# Ask the question that I know in the knowledge.\n",
     "question = \"Do you know any point of interests in Michigan?\"\n",
-    "answer = await bot.ask(question)\n",
-    "print(f\"{answer.content} [{answer.citation}]\")"
+    "answer = await bot.ask(question, temperature=GPT_TEMPERATURE)\n",
+    "print(answer)"
    ],
    "metadata": {
     "collapsed": false
@@ -298,7 +298,7 @@
    "source": [
     "unknown = \"What is Euler identity?\"\n",
     "answer2 = await bot.ask(unknown)\n",
-    "print(f\"{answer2.content} [{answer2.citation}]\")"
+    "print(answer2)"
    ],
    "metadata": {
     "collapsed": false
@@ -309,7 +309,7 @@
    "source": [
     "**We can ask it not to restricted to the given facts, but use them to update its pre-trained knowledge.**  `(restricted=False)`\n",
     "\n",
-    "Note that the bot now answered the question about Euler's Identity (the citation is None).  But it still answered using the given indexed knowledge if it was available."
+    "Note that the bot now answered the question about Euler's Identity (there were no citations).  But it still answered using the given indexed knowledge if it was available."
    ],
    "metadata": {
     "collapsed": false
@@ -323,14 +323,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Euler's identity is a mathematical equation that combines several fundamental mathematical constants, namely: the number 0, the number 1, the number π (Pi, roughly equal to 3.14159), the number e (Euler's number, roughly equal to 2.71828), and the square root of -1 (denoted as i). The identity is written as e^(iπ) + 1 = 0. This equation is often admired for its beauty as it involves the five most important constants in mathematics. [None]\n"
+      "Euler's identity is a mathematical equation that demonstrates a deep relationship between fundamental mathematical quantities. It is expressed as e^(iπ) + 1 = 0, where e is the base of the natural logarithm, i is the imaginary unit, and π is pi, the ratio of the circumference of a circle to its diameter. This equation combines arithmetic, calculus, and geometry, and is often cited as an example of mathematical beauty.\n"
      ]
     }
    ],
    "source": [
     "unknown = \"What is Euler identity?\"\n",
     "answer2 = await bot.ask(unknown, restricted=False)\n",
-    "print(f\"{answer2.content} [{answer2.citation}]\")"
+    "print(answer2)"
    ],
    "metadata": {
     "collapsed": false
@@ -344,14 +344,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, one of the interesting places in Michigan is the M-137 highway which served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. It was a state trunkline highway in Michigan that ran through the community of Interlochen to US Highway 31 in Grand Traverse County. However, the highway designation was decommissioned in 2020 and the signage was removed. [7751000]\n"
+      "Yes, one point of interest in Michigan is the M-137 highway which served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. However, the highway was decommissioned and the signage was removed by August 2020 . [7751000]\n"
      ]
     }
    ],
    "source": [
     "question = \"Do you know any point of interests in Michigan?\"\n",
     "answer = await bot.ask(question, restricted=False)\n",
-    "print(f\"{answer.content} [{answer.citation}]\")"
+    "print(answer)"
    ],
    "metadata": {
     "collapsed": false
@@ -376,18 +376,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, Michigan is a state rich with history, natural beauty, and a wide range of cultural institutions and activities. Here are some points of interest:\n",
+      "Sure, Michigan has a lot of interesting spots to visit. Here are some of them:\n",
       "\n",
-      "1. Mackinac Island: Known for its famous fudge, historic Fort Mackinac, and the Grand Hotel.\n",
-      "2. Pictured Rocks National Lakeshore: Beautiful rock formations along Lake Superior.\n",
-      "3. The Henry Ford Museum: A large indoor and outdoor history museum complex in the Detroit suburb of Dearborn.\n",
-      "4. Detroit Institute of Arts: Known for its diverse collection and the Detroit Industry Murals painted by Diego Rivera.\n",
-      "5. Sleeping Bear Dunes National Lakeshore: A beautiful area along the northwest coast of the Lower Peninsula of Michigan.\n",
-      "6. Belle Isle Park: A beautiful island park in the Detroit River with a zoo, conservatory, and maritime museum.\n",
-      "7. The University of Michigan in Ann Arbor: One of the best public universities in the U.S. with a campus full of architectural beauty.\n",
-      "8. The Motown Museum in Detroit: The museum is located in the house where record company Motown founder Berry Gordy Jr. lived and recorded.\n",
-      "9. The Detroit Zoo: Located in Royal Oak, it's one of Michigan's most visited tourist attractions.\n",
-      "10. The Gerald R. Ford Presidential Museum in Grand Rapids: A museum dedicated to the life and work of former president Gerald Ford. [None]\n"
+      "1. Mackinac Island: Known for its stunning views, historic sites, and fudge shops. It's a car-free destination where horse-drawn carriages and bicycles are the main modes of transportation.\n",
+      "\n",
+      "2. The Henry Ford Museum: Located in Dearborn, it covers American innovation history. The museum complex also includes Greenfield Village, where historic buildings have been moved to create a living history experience.\n",
+      "\n",
+      "3. Detroit Institute of Arts: Known for its diverse collection and the Detroit Industry Murals painted by Diego Rivera.\n",
+      "\n",
+      "4. Pictured Rocks National Lakeshore: Offers beautiful lake views, sand dunes, beaches, waterfalls, and forest trails.\n",
+      "\n",
+      "5. Sleeping Bear Dunes National Lakeshore: Known for its expansive dunes and beautiful Lake Michigan views.\n",
+      "\n",
+      "6. The Michigan State Capitol in Lansing: A historic building with impressive architecture.\n",
+      "\n",
+      "7. Belle Isle Park: An island park in Detroit featuring a zoo, conservatory, and the Detroit Yacht Club.\n",
+      "\n",
+      "8. The Detroit Zoo: Located in Royal Oak, it houses a wide range of animals from around the world.\n",
+      "\n",
+      "9. The University of Michigan in Ann Arbor: Known for its beautiful campus, museums, and sporting events.\n",
+      "\n",
+      "10. Motor City, Detroit: Known for its connection to the auto industry and Motown music.\n",
+      "\n",
+      "Remember, this is just a small sampling of the points of interest in Michigan. There's so much more to explore!\n"
      ]
     }
    ],
@@ -395,7 +406,7 @@
     "question = \"Do you know any point of interests in Michigan?\"\n",
     "bot.withFacts(None)\n",
     "answer = await bot.ask(question, restricted=False)\n",
-    "print(f\"{answer.content} [{answer.citation}]\")"
+    "print(answer)"
    ],
    "metadata": {
     "collapsed": false
