--- a/notebook/marqo.ipynb
+++ b/notebook/marqo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "import os.path\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "INDEX_NAME = \"wiki\""
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "with open(DATA_FILE, \"r\") as fd:\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -91,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'errors': False,\n 'processingTimeMs': 25282.554010998865,\n 'index_name': 'wiki',\n 'items': [{'_id': '7751000',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751001',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751042',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751048',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751062',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751063',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751065',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751092',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751123',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751136',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751172',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751190',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751199',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751206',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751210',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751227',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751233',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751238',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751246',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751258',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200}]}"
+      "text/plain": "{'errors': False,\n 'processingTimeMs': 43825.43864499894,\n 'index_name': 'wiki',\n 'items': [{'_id': '7751000',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751001',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751042',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751048',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751062',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751063',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751065',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751092',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751123',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751136',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751172',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751190',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751199',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751206',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751210',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751227',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751233',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751238',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751246',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751258',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200}]}"
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,6 +108,26 @@
     "    tensor_fields=[\"title\", \"text\"],\n",
     "    auto_refresh=True\n",
     ")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'numberOfDocuments': 20, 'numberOfVectors': 321}"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mq.index(INDEX_NAME).get_stats()"
    ],
    "metadata": {
     "collapsed": false
