Added more comments.  Tidy up README.md.  Corrected ProximityEvaluator to compare with the standard questions instead of IDs.

--- a/notebook/demo_evaluation.ipynb
+++ b/notebook/demo_evaluation.ipynb
@@ -122,7 +122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mj/8vz4yhqj5w76hnkw54qktw900000gn/T/ipykernel_85438/787393499.py:2: RuntimeWarning: coroutine 'MarqoIndexer.size' was never awaited\n",
+      "/var/folders/mj/8vz4yhqj5w76hnkw54qktw900000gn/T/ipykernel_60912/787393499.py:2: RuntimeWarning: coroutine 'MarqoIndexer.size' was never awaited\n",
       "  if index.size() == 0:\n",
       "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
      ]
@@ -180,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The President of the United States of America is the head of state and head of government of the United States, leading the executive branch of the federal government and acting as the commander-in-chief of the United States armed forces. The President also has the power to grant federal pardons and reprieves, and to convene and adjourn either or both houses of Congress under extraordinary circumstances. [409,410,411]\n",
+      "The President of the United States of America is the head of state and head of government of the United States. The president leads the executive branch of the federal government and is the commander-in-chief of the United States Armed Forces. The president is also empowered to grant federal pardons and reprieves, and to convene and adjourn either or both houses of Congress under extraordinary circumstances. [409,410,411]\n",
       "In the index\n",
       "[409] the president of the united states of america (potus) is the head of state and head of government of the united states .\n",
       "[410] the president leads the executive branch of the federal government and is the commander-in-chief of the united states armed forces .\n",
@@ -222,7 +222,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n"
+      "Failed question: how do forensic auditors examine financial reporting (I don't know [--])\n",
+      "0.9\n"
      ]
     }
    ],
@@ -257,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9997768600781759\n"
+      "0.98506232102712\n"
      ]
     }
    ],
@@ -315,7 +316,6 @@
     "answerUnknownQuestion = \"what states does interstate 70 travel through\"\n",
     "answerUnknownId = '777'\n",
     "print(await index.get(answerUnknownId))\n",
-    "\n",
     "print(await bot.ask(answerUnknownQuestion))"
    ],
    "metadata": {
@@ -330,7 +330,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation X is defined by those born from the early 1960s to the early 1980s. [320]\n"
+      "Generation X typically refers to those born from the early 1960s to the early 1980s. [320]\n"
      ]
     }
    ],
@@ -341,6 +341,58 @@
     "# answerNotFoundByIndex = \"what cards do you need in poker to get a royal flush\"\n",
     "# answerNotFoundByIndex = \"what is the title of hobbes main work\"\n",
     "print(await bot.ask(answerNotFoundByIndex))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'_found': True, 'question': 'how often do elk have sex', 'answer': 'males also engage in ritualized mating behaviors during the rut , including posturing, antler wrestling (sparring), and bugling, a loud series of vocalizations which establishes dominance over other males and attracts females.', '_id': '333'}]\n",
+      "I don't know [--]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The information was given in the question, but I only pick up information from the answer.  Otherwise, the LLM may cheat.\n",
+    "\n",
+    "infoProvidedByQuestion = \"how often do elk have sex\"\n",
+    "infoProvidedByQuestionId = '333'\n",
+    "\n",
+    "print(await index.get(infoProvidedByQuestionId))\n",
+    "print(await bot.ask(infoProvidedByQuestion))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'_found': True, 'question': 'how did armando christian perez become famous', 'answer': 'armando pérez (born january 15, 1981), better known by his stage name pitbull, is an american rapper, songwriter, and record producer.', '_id': '29'}]\n",
+      "Armando Christian Pérez, better known as Pitbull, became famous as an American rapper, songwriter, and record producer. [29]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The answer was found, but the LLM does not feel sufficient to answer the question.  (Sometimes, provided inconsistent results.)\n",
+    "\n",
+    "insufficientInfo = \"how did armando christian perez become famous\"\n",
+    "insufficientInfoId = \"29\"\n",
+    "\n",
+    "print(await index.get(insufficientInfoId))\n",
+    "print(await bot.ask(insufficientInfo))"
    ],
    "metadata": {
     "collapsed": false
